<resources>
    <string name="app_name">Pics on Tumblr</string>

    <string name="action_go_to_post">Go to post</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_more_columns">More columns</string>
    <string name="action_less_columns">Less columns</string>
    <string name="action_search">Search</string>
    <string name="action_custom_blog">Go to</string>
    <string name="action_close_page">Close page</string>
    <string name="action_reblog_stats">Reblogs statistics</string>
    <string name="action_likes_stats">Likes statistics</string>

    <string name="action_poster_blog_new_page">Poster\'s blog in new page</string>
    <string name="action_poster_blog">Poster\'s blog</string>
    <string name="action_reblog_like">Reblog and like post</string>
    <string name="action_open_new_page">Open in new page</string>
    <string name="action_open">Open</string>

    <!-- todo move constants here -->

</resources>
