<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/button_poster_blog_new_page" android:title="@string/action_poster_blog_new_page"
        app:showAsAction="never" />

    <item android:id="@+id/button_poster_blog" android:title="@string/action_poster_blog"
        app:showAsAction="never" />

    <item android:id="@+id/action_reblog_like" android:title="@string/action_reblog_like"
        app:showAsAction="never" />

    <item android:id="@+id/action_open_new_page" android:title="@string/action_open_new_page"
        app:showAsAction="never" />

    <item android:id="@+id/action_open" android:title="@string/action_open"
        app:showAsAction="never" />

</menu>
